Bug 463317 - Cards are very small on Linux Mint 21.x on 4K Display
Summary: Cards are very small on Linux Mint 21.x on 4K Display
Status: RESOLVED FIXED
Alias: None
Product: kpat
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.12.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Stephan Kulow
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-21 21:32 UTC by RiedRalf
Modified: 2023-01-10 22:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description RiedRalf 2022-12-21 21:32:10 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. open KPat
2. cards are using about 12/100 of window high on fullscreen
3. max cards size has achieved at a windows size about fullHD. 1/4 of the 4K screen.
4. expand the window over 1920 x 1080 will not more grow the cards

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Albert Astals Cid 2023-01-10 22:56:47 UTC
https://invent.kde.org/games/kpat/-/merge_requests/33
Comment 2 Joshua Goins 2023-01-10 22:58:14 UTC
Git commit 01b773388272adf88a584ce7fe63e0aa1b9dc40a by Joshua Goins.
Committed on 10/01/2023 at 22:24.
Pushed by aacid into branch 'master'.

Remove upper card width limit

For displays bigger than 1080p, the cards have huge margins on the sides
of the screen.

M  +0    -3    src/libkcardgame/kabstractcarddeck.cpp

https://invent.kde.org/games/kpat/commit/01b773388272adf88a584ce7fe63e0aa1b9dc40a