Remove upper card width limit

For displays bigger than 1080p, the cards have huge margins on the sides
of the screen.

BUG: 463317